Added series features

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ body {
   background-color: #221944;
 }
 
+.pulsate-fwd{-webkit-animation:pulsate-fwd .5s ease-in-out infinite both;animation:pulsate-fwd .5s ease-in-out infinite both}
+
+@-webkit-keyframes pulsate-fwd{0%{-webkit-transform:scale(1);transform:scale(1)}50%{-webkit-transform:scale(1.1);transform:scale(1.1)}100%{-webkit-transform:scale(1);transform:scale(1)}}@keyframes pulsate-fwd{0%{-webkit-transform:scale(1);transform:scale(1)}50%{-webkit-transform:scale(1.1);transform:scale(1.1)}100%{-webkit-transform:scale(1);transform:scale(1)}}
+
+
 
 /* BUTTON ANIMATION */
 
@@ -141,9 +146,6 @@ body {
 }
 
 /* NavBar */
-.NavBar {
-  background-color:#221944;
-}
 .NavBar .NavLinks .LoginBtn,
 .NavBar .NavLinks .LogoutBtn,  
 .Bar .menu-link .Login, 
